<resources>
    <string name="app_name">operation</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Calculadora</string>
    <string name="message">Ingrese los numeros:</string>
    <string name="message1">operando 1:  </string>
    <string name="message2">operando 2:  </string>
    <string name="message3">Elija la operación:</string>
    <string name="op1">Suma</string>
    <string name="op2">Resta</string>
    <string name="op3">Multiplicación</string>
    <string name="op4">División</string>
    <string name="button">Aceptar</string>
    <string name="ans">Resultado:   </string>
</resources>
