<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/powderblue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"/>
        <TextView
            android:text="@string/message"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/maroon"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <EditText
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:hint="@string/message1"
                android:textColorHint="@color/blue"
                android:id="@+id/eNum1"/>
            <EditText
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:hint="@string/message2"
                android:textColorHint="@color/blue"
                android:id="@+id/eNum2"/>

        </LinearLayout>

        <TextView
            android:text="@string/message3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/maroon"
            android:layout_marginTop="10dp"
            android:textSize="15dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/op1"
                android:textColor="@color/maroon"
                android:layout_marginLeft="25dp"
                android:id="@+id/op1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="@string/op2"
                android:textColor="@color/maroon"
                android:layout_marginLeft="25dp"
                android:id="@+id/op2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="@string/op3"
                android:textColor="@color/maroon"
                android:layout_marginLeft="25dp"
                android:id="@+id/op3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="@string/op4"
                android:textColor="@color/maroon"
                android:layout_marginLeft="25dp"
                android:id="@+id/op4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/accept"
            android:text="@string/button"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/ans"
                android:textColor="@color/maroon"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:hint="Resultado"
                android:id="@+id/ans"
                android:layout_width="match_parent"
                android:textColor="@color/maroon"
                android:textSize="20dp"
                android:textColorHint="@color/blue"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
